# comprehensive_cpp

./: .clang-format  .gitignore  .gitmodules  Makefile  build.sh  version.txt
example/: .clang-format  .gitignore  build.sh  doxygen.config
example/architecture/: .gitignore  CMakeLists.txt  build.sh  cmake_build.sh
example/architecture/app/: main.cpp
example/architecture/controller/: CMakeLists.txt
example/architecture/controller/h/controller/: controller.h
example/architecture/controller/src/: controller.cpp
example/architecture/controller/ut/: controller_ut.cpp
example/architecture/lib/: CMakeLists.txt
example/architecture/lib/h/lib/: nstd.h
example/architecture/lib/ut/: nstd_ut.cpp
example/architecture/logging/: CMakeLists.txt
example/architecture/logging/h/logging/: logger.h
example/architecture/logging/src/: logger.cpp
example/architecture/logging/ut/: logger_ut.cpp
example/architecture/model/: CMakeLists.txt
example/architecture/model/h/model/: command_executor.h  model.h  observer.h  slow_mover.h  x.h
example/architecture/model/src/: command_executor.cpp  model.cpp  observer.cpp  slow_mover.cpp  x.cpp  x.h
example/architecture/model/ut/: command_executor_state_ut.cpp  command_executor_ut.cpp  model_ut.cpp  slow_mover_ut.cpp  x_ut.cpp
example/architecture/ut/: CMakeLists.txt
example/architecture/view/: CMakeLists.txt
example/architecture/view/h/view/: view.h
example/architecture/view/src/: view.cpp
example/architecture/view/ut/: view_ut.cpp
example/code_analysis/: Makefile  build.sh  code_analysis.cpp  compile_commands.json  gen_warnings.sh
example/cpp_improve/: Makefile  build.sh  cpp11_ut.cpp  cpp14_ut.cpp  cpp17_ut.cpp  cpp20_ut.cpp
example/etc/: Makefile  coding_style.cpp  comment.cpp  debug.cpp  naming.cpp  scoped_guard_ut.cpp  ut.cpp
example/h/: do_heavy_algorithm.h  utils.h
example/programming_convention/: Makefile  class.h  class_ut.cpp  compile_commands.json  etc.cpp  fixed_point.h  fixed_point_ut.cpp  float_ut.cpp  func_arg_type_ut.cpp  func_return_ut.cpp  func_ut.cpp  header.h  header_ut.cpp  member_func_ut.cpp  operator_ut.cpp  pkg.cpp  preprocessor.h  preprocessor_ut.cpp  runtime_ut.cpp  scope.h  scope2.h  scope_ut.cpp  scoped_guard_ut.cpp  string_vector.cpp  string_vector.h  string_view_ut.cpp  syntax_ut.cpp  type_const_ut.cpp  type_ut.cpp
example/ref_async_org/: Makefile  main.cpp
example/ref_async_r0/: Makefile  main.cpp
example/ref_async_r1/: Makefile  lib.cpp  lib.h  lib_ut.cpp  main.cpp
example/ref_async_r2/: Makefile  build.sh  lib.cpp  lib.h  lib_ut.cpp  main.cpp
example/ref_async_r3/: Makefile  build.sh  controller.cpp  controller.h  controller_ut.cpp  main.cpp  model.cpp  model.h  model_ut.cpp  view.cpp  view.h  view_ut.cpp
example/ref_async_r4/: Makefile  controller.cpp  controller_ut.cpp  main.cpp  model_ut.cpp  view.h  view_ut.cpp
example/ref_async_r5/: Makefile  arg.cpp  arg.h  arg_ut.cpp  build.sh  controller.h  controller_ut.cpp  main.cpp  model_ut.cpp  view.cpp  view_ut.cpp
example/ref_async_r6/: Makefile  arg.cpp  arg.h  arg_ut.cpp  controller.cpp  controller.h  controller_ut.cpp  lib.cpp  lib.h  lib_ut.cpp  main.cpp  model.cpp  model.h  model_ut.cpp  view.cpp  view.h
example/ref_it/: it.sh
example/ref_org/: Makefile  main.cpp
exercise/: .clang-format  .gitignore  README.md  build.sh  export_exercise.py
exercise/design_pattern_a/: Makefile  accessor.cpp  clone.cpp  copy_and_swap.cpp  crtp.cpp  di.cpp  enum_bitmask.cpp  factory.cpp  factory_lib.cpp  factory_lib.h  future.cpp  guard.cpp  immutable.cpp  named_constructor.cpp  nvi.cpp  (+12 more)
h/: gtest_wrapper.h  measure_performance.h  nstd_type2str.h  ref_async_mock.h  scoped_guard.h  suppress_warning.h  suppress_warning_clang.h  suppress_warning_gcc.h
image/: fake.pu
md/: .gitignore  afterword.md  appendix.md  architecture.md  bibliography.md  code_analysis.md  coding_style.md  comment.md  comprehensive_intro.md  concurrency.md  cpp_improve.md  debug.md  deps.md  dev_tools.md  exercise_a.md  exercise_q.md  introduction.md  naming_practice.md  process_and_infra.md  programming_convention.md  software_practice.md
o/: .gitignore  afterword.md  architecture.md  bibliography.md  code_analysis.md  coding_style.md  comment.md  comprehensive_intro.md  concurrency.md  core_lang_spec.md  cpp_idiom.md  cpp_idioms.md  cpp_improve.md  cpp_semantics.md  cpp_standard.md  debug.md  deps.md  design_pattern.md  dev_tools.md  dynamic_memory_allocation.md  exercise_a.md  exercise_q.md  introduction.md  naming_practice.md  process_and_infra.md  programming_convention.md  sample_code.md  software_practice.md  solid.md  stdlib_and_concepts.md  template_meta_programming.md  term_explanation.md
plant_uml/: 7_habits.pu  agile.pu  agile_workflow.pu  arch_and_lib.pu  arch_and_lib_ut.pu  arch_dir_dep.pu  arch_file_example.pu  arch_mvc.pu  arch_pkg_example.pu  arch_seq_example.pu  arch_ut_pkg_example.pu  basic_ios.pu  dependency.pu  deps.pu  deps_2.pu  deps_default.pu  deps_ng.pu  deps_ut_data.pu  general_workflow.pu  git_branching.pu  package.pu  package_ng.pu  pkg_tree.pu  readme.md  ref_async_r6_class.pu  ref_async_r6_seq.pu  ref_async_r6_seq_concept.pu  refactoring.pu  refactoring_ut.pu  refactoring_with_di.pu  tdd.pu  v_model.pu  v_model_process.pu  wf_vs_it.pu
seminer/: time_table_2020.txt  time_table_2022-2H.txt
vim_config/: README.md  bashrc  gitconfig  inputrc  vim.sh
(+157 files in other folders)
